--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,56 +5,37 @@ on:
     branches: [main]
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
-
 jobs:
-  build:
-    name: Build
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+        with:
+          fetch-depth: 0
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-      
+
       - name: Install dependencies
-        run: |
-          npm ci
-          npm list
-      
-      - name: List files before build
-        run: ls -la
-      
+        run: npm ci
+
+      - name: Install Vite GH Pages
+        run: npm install --save-dev vite-gh-pages
+
       - name: Build
-        run: |
-          npm run build
-          ls -la dist/
-      
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: 'dist'
-  
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
+        run: npm run build
+
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          npx vite-gh-pages -d dist -b gh-pages -m "Deploy to GitHub Pages"
+
+      - name: Get the deployment URL
+        run: |
+          echo "Deployment URL: https://${{ github.repository_owner }}.github.io/A_folio/"
+          echo "::set-output name=url::https://${{ github.repository_owner }}.github.io/A_folio/"
