--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,25 +28,35 @@ jobs:
 
       - name: Build
         run: |
-          # Ensure dist directory exists
+          # Ensure dist directory exists and is empty
+          rm -rf dist
           mkdir -p dist
+          
           # Copy public files to dist
-          cp -r public/* dist/ 2>/dev/null || :
+          if [ -d "public" ]; then
+            cp -r public/* dist/ 2>/dev/null || :
+          fi
           
-          # Create a temporary index.html with the correct base href
-          sed 's|<base href=".*"|<base href="/A_folio/"|' index.html > index.tmp && mv index.tmp index.html
+          # Create a base config file for Vite
+          echo "// This file is auto-generated during build
+          export const BASE_URL = '/A_folio/';" > src/config.js
           
-          # Build with production settings and base URL
-          NODE_ENV=production VITE_BASE_URL=/A_folio/ npm run build
+          # Build with production settings
+          NODE_ENV=production npm run build
           
           # Ensure .nojekyll file exists
           touch dist/.nojekyll
           
-          # Verify the built index.html has the correct base path
-          if ! grep -q '<base href="/A_folio/"' dist/index.html; then
-            echo "Error: base href not set correctly in dist/index.html"
-            echo "Fixing base href in dist/index.html..."
-            sed -i 's|<base href=".*"|<base href="/A_folio/"|' dist/index.html
+          # Fix base href in index.html if needed
+          if [ -f "dist/index.html" ]; then
+            if ! grep -q '<base href="/A_folio/"' dist/index.html; then
+              echo "Setting base href in dist/index.html..."
+              sed -i 's|<base href=[^>]*>|<base href="/A_folio/">|' dist/index.html
+            fi
+            
+            # Fix asset paths in index.html
+            sed -i 's|href="/|href="/A_folio/|g' dist/index.html
+            sed -i 's|src="/|src="/A_folio/|g' dist/index.html
           fi
           
           echo "Build completed successfully"
