13 Update GitHub Actions workflow with latest versions and modern syntax

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "homepage": "https://Razee4315.github.io/A_folio",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode production",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vite preview --port 4173",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist -b gh-pages"
   },
