--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -28,46 +28,22 @@ jobs:
 
       - name: Build
         run: |
-          # Ensure dist directory exists and is empty
+          # Clean dist directory
           rm -rf dist
           mkdir -p dist
           
-          # Copy public files to dist
-          if [ -d "public" ]; then
-            cp -r public/* dist/ 2>/dev/null || :
-          fi
+          # Build the app
+          npm run build
           
-          # Create a base config file for Vite
-          echo "// This file is auto-generated during build
-          export const BASE_URL = '/A_folio/';" > src/config.js
-          
-          # Build with production settings
-          NODE_ENV=production npm run build
-          
-          # Ensure .nojekyll file exists
+          # Create .nojekyll file
           touch dist/.nojekyll
-          
-          # Fix base href in index.html if needed
-          if [ -f "dist/index.html" ]; then
-            if ! grep -q '<base href="/A_folio/"' dist/index.html; then
-              echo "Setting base href in dist/index.html..."
-              sed -i 's|<base href=[^>]*>|<base href="/A_folio/">|' dist/index.html
-            fi
-            
-            # Fix asset paths in index.html
-            sed -i 's|href="/|href="/A_folio/|g' dist/index.html
-            sed -i 's|src="/|src="/A_folio/|g' dist/index.html
-          fi
           
           echo "Build completed successfully"
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           folder: dist
           branch: gh-pages
           clean: true
-          clean-exclude: |
-            .git
-            .github
-            .gitignore
