--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode production",
+    "postbuild": "node scripts/fix-assets.js",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview --port 4173",
